--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Import Font Awesome for use in page -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
-
+    <title>Cape Cod Real Estate</title>
 
 
     <!--Let browser know website is optimized for mobile-->
@@ -17,6 +17,19 @@
   </head>
 
   <body>
+
+    <div class="navbar-fixed">
+        <nav class="blue">
+            <div class="container">
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo">Cape Cod Real Estate</a>
+                    <a href="#" data-target="mobile-nav" class="sidenav-trigger">
+                        <i class="material-icons">menu</i>
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </div>
 
      <!-- Compiled and minified Materialize JavaScript -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
