--- a/index.html
+++ b/index.html
@@ -73,35 +73,30 @@
         <div class="slider">
             <ul class="slides">
                 <li>
-                    <img src="https://lorempixel.com/580/250/nature/1">
-                    <!-- random image -->
+                    <img src="img/lighthouse-1149112_1920.jpg">
+                    <!-- Image from Pixabay.com 
+                        https://pixabay.com/en/lighthouse-seaside-coast-coastline-1149112/ -->
                     <div class="caption center-align">
-                        <h3>This is our big Tagline!</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                        <h3>Lighthouse adjacent </h3>
+                        <h5 class="light grey-text text-lighten-3">Incredible View</h5>
                     </div>
                 </li>
                 <li>
-                    <img src="https://lorempixel.com/580/250/nature/2">
-                    <!-- random image -->
+                    <img src="img/house-2711173_1920.jpg">
+                    <!-- Image from Pixabay 
+                    https://pixabay.com/en/house-summer-home-coast-lake-sea-2711173/ -->
                     <div class="caption left-align">
-                        <h3>Left Aligned Caption</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                        <h3>Waterfront Views</h3>
+                        <h5 class="light grey-text text-lighten-3">Great views and remote location</h5>
                     </div>
                 </li>
                 <li>
-                    <img src="https://lorempixel.com/580/250/nature/3">
-                    <!-- random image -->
+                    <img src="img/beach-house-3345590_1920.jpg">
+                    <!-- Image from Pixabay 
+                    https://pixabay.com/en/beach-house-seaside-coast-landscape-3345590/ -->
                     <div class="caption right-align">
-                        <h3>Right Aligned Caption</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-                    </div>
-                </li>
-                <li>
-                    <img src="https://lorempixel.com/580/250/nature/4">
-                    <!-- random image -->
-                    <div class="caption center-align">
-                        <h3>This is our big Tagline!</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                        <h3>Summer Rental Options</h3>
+                        <h5 class="light grey-text text-lighten-3">Spend your vacation right on the beach!</h5>
                     </div>
                 </li>
             </ul>
@@ -116,6 +111,10 @@
         //Sidenav
         const sideNav = document.querySelector('.sidenav');
         M.Sidenav.init(sideNav, {});
+
+        // Image Slider
+        const slider = document.querySelector(".slider");
+        let imageSlider = M.Slider.init(slider);
     </script>
 </body>
 
