--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img src="img/lighthouse-1149112_1920.jpg">
                     <!-- Image from Pixabay.com 
                         https://pixabay.com/en/lighthouse-seaside-coast-coastline-1149112/ -->
-                    <div class="caption center-align">
+                    <div class="caption left-align">
                         <h3>Lighthouse adjacent </h3>
                         <h5 class="light grey-text text-lighten-3">Incredible View</h5>
                     </div>
@@ -85,9 +85,9 @@
                     <img src="img/house-2711173_1920.jpg">
                     <!-- Image from Pixabay 
                     https://pixabay.com/en/house-summer-home-coast-lake-sea-2711173/ -->
-                    <div class="caption left-align">
+                    <div class="caption center-align">
                         <h3>Waterfront Views</h3>
-                        <h5 class="light grey-text text-lighten-3">Great views and remote location</h5>
+                        <h5 class="light white-text text-lighten-3">Great views and remote location</h5>
                     </div>
                 </li>
                 <li>
