Moved <SCRIPT/>  from .html to /src/index.js

--- a/index.html
+++ b/index.html
@@ -107,15 +107,7 @@
     <!-- Compiled and minified Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
-    <script>
-        //Sidenav
-        const sideNav = document.querySelector('.sidenav');
-        M.Sidenav.init(sideNav, {});
-
-        // Image Slider
-        const slider = document.querySelector(".slider");
-        let imageSlider = M.Slider.init(slider);
-    </script>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
