changed H3s to H2s. And put in link to /css/style.css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <title>Cape Cod Real Estate</title>
 
+    <link rel="stylesheet" href="css/style.css">
+
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -77,7 +79,7 @@
                     <!-- Image from Pixabay.com 
                         https://pixabay.com/en/lighthouse-seaside-coast-coastline-1149112/ -->
                     <div class="caption left-align">
-                        <h3>Lighthouse adjacent </h3>
+                        <h2>Lighthouse adjacent </h2>
                         <h5 class="light grey-text text-lighten-3">Incredible View</h5>
                     </div>
                 </li>
@@ -86,7 +88,7 @@
                     <!-- Image from Pixabay 
                     https://pixabay.com/en/house-summer-home-coast-lake-sea-2711173/ -->
                     <div class="caption center-align">
-                        <h3>Waterfront Views</h3>
+                        <h2>Waterfront Views</h2>
                         <h5 class="light white-text text-lighten-3">Great views and remote location</h5>
                     </div>
                 </li>
@@ -95,12 +97,16 @@
                     <!-- Image from Pixabay 
                     https://pixabay.com/en/beach-house-seaside-coast-landscape-3345590/ -->
                     <div class="caption right-align">
-                        <h3>Summer Rental Options</h3>
+                        <h2>Summer Rental Options</h2>
                         <h5 class="light grey-text text-lighten-3">Spend your vacation right on the beach!</h5>
                     </div>
                 </li>
             </ul>
         </div>
+
+    </section>
+    <!-- Section: Search -->
+    <section id="search" class="section section-search blue darken-2 white-text center scrollspy">
 
     </section>
 
