finished adding #search section content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body id="home" class="scrollspy" >
     <!-- Navbar section  -->
     <div class="navbar-fixed">
         <nav class="blue">
@@ -107,7 +107,16 @@
     </section>
     <!-- Section: Search -->
     <section id="search" class="section section-search blue darken-2 white-text center scrollspy">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-s12">
+                    <h3>Search Towns</h3>
+                    <div class="input-field">
+                        <input type="text" class="white grey-text autocomplete" id="autocomplete-input" placeholder="Local Town Names">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Compiled and minified Materialize JavaScript -->
