--- a/index.html
+++ b/index.html
@@ -119,6 +119,35 @@
         </div>
     </section>
 
+    <!-- Section: Icon Boxes -->
+    <section class="section section-icons grey lighten-4 center">
+        <div class="container">
+            <div class="row">
+                <div class="col-s12-m4">
+                    <div class="card-panel">
+                        <i class="material-icons large blue-text">add</i>
+                        <h4>Stuff</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="col-s12-m4">
+                        <div class="card-panel">
+                            <i class="material-icons large blue-text">add</i>
+                            <h4>Stuff</h4>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+                    <div class="col-s12-m4">
+                        <div class="card-panel">
+                            <i class="material-icons large blue-text">add</i>
+                            <h4>Stuff</h4>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Compiled and minified Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
