added in #popular section and fixed col errors

--- a/index.html
+++ b/index.html
@@ -123,24 +123,65 @@
     <section class="section section-icons grey lighten-4 center">
         <div class="container">
             <div class="row">
-                <div class="col-s12-m4">
+                <div class="col s12 m4">
                     <div class="card-panel">
                         <i class="material-icons large blue-text">add</i>
                         <h4>Stuff</h4>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
-                    <div class="col-s12-m4">
-                        <div class="card-panel">
-                            <i class="material-icons large blue-text">add</i>
-                            <h4>Stuff</h4>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card-panel">
+                        <i class="material-icons large blue-text">add</i>
+                        <h4>Stuff</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card-panel">
+                        <i class="material-icons large blue-text">add</i>
+                        <h4>Stuff</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section: Popular Places -->
+    <section id="popular" class="section section-popular-scrollspy">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="img/beach-house-3345590_1920.jpg" alt="">
+                            <span class="card-title">Beach House</span>
+                        </div>
+                        <div class="card-content">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ipsa repudiandae expedita quasi iste ea.
                         </div>
                     </div>
-                    <div class="col-s12-m4">
-                        <div class="card-panel">
-                            <i class="material-icons large blue-text">add</i>
-                            <h4>Stuff</h4>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="img/house-2711173_1920.jpg" alt="">
+                            <span class="card-title">Waterfront</span>
+                        </div>
+                        <div class="card-content">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ipsa repudiandae expedita quasi iste ea.
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="img/lighthouse-1149112_1920.jpg" alt="">
+                            <span class="card-title">Light House Adjacent</span>
+                        </div>
+                        <div class="card-content">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ipsa repudiandae expedita quasi iste ea.
                         </div>
                     </div>
                 </div>
@@ -151,6 +192,7 @@
     <!-- Compiled and minified Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
+    <!-- Link to script for this page -->
     <script src="src/index.js"></script>
 </body>
 
