--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     <section id="popular" class="section section-popular-scrollspy">
         <div class="container">
             <div class="row">
+                <h4 class="center"><span class="blue-text">Popular</span> Locations</h4>
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
