--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body id="home" class="scrollspy" >
+<body id="home" class="scrollspy">
     <!-- Navbar section  -->
     <div class="navbar-fixed">
         <nav class="blue">
@@ -152,7 +152,8 @@
     <section id="popular" class="section section-popular-scrollspy">
         <div class="container">
             <div class="row">
-                <h4 class="center"><span class="blue-text">Popular</span> Locations</h4>
+                <h4 class="center">
+                    <span class="blue-text">Popular</span> Locations</h4>
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
@@ -185,6 +186,33 @@
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ipsa repudiandae expedita quasi iste ea.
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section: Social Media -->
+    <section class="section section-social blue darken-2 white-text center">
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <h4>Follow us on Social Media</h4>
+                    <p>For special deals and offers</p>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-facebook fa-4x"></i>
+                    </a>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-twitter fa-4x"></i>
+                    </a>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-instagram fa-4x"></i>
+                    </a>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-google-plus fa-4x"></i>
+                    </a>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-pinterest fa-4x"></i>
+                    </a>
                 </div>
             </div>
         </div>
