--- a/index.html
+++ b/index.html
@@ -218,6 +218,52 @@
         </div>
     </section>
 
+    <section id="gallery" class="section section-gallery scrollspy">
+        <div class="container">
+            <h4 class="center">Photo
+                <span class="blue-text">Gallery</span>
+            </h4>
+            <div class="row">
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+                <div class="col s12 m4">
+                    <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Compiled and minified Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
