--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <div class="card">
                         <div class="card-image">
                             <img src="img/lighthouse-1149112_1920.jpg" alt="">
-                            <span class="card-title">Light House Adjacent</span>
+                            <span class="card-title">Light House </span>
                         </div>
                         <div class="card-content">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ipsa repudiandae expedita quasi iste ea.
@@ -259,6 +259,19 @@
                 </div>
                 <div class="col s12 m4">
                     <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section: Contact -->
+    <section id="contact" class="section section-contact scrollspy">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card-panel blue white-text center">
+                        <i class="material-icons">email</i>
+                    </div>
                 </div>
             </div>
         </div>
