added on to #contact section

--- a/index.html
+++ b/index.html
@@ -271,7 +271,18 @@
                 <div class="col s12 m6">
                     <div class="card-panel blue white-text center">
                         <i class="material-icons">email</i>
+                        <h4>Contact Us Today</h4>
                     </div>
+
+                    <ul class="collection with-header">
+                        <li class="collection-header">
+                            <h4>Location</h4>
+                        </li>
+                        <li class="collection-item">Cape Cod Real Estate &comp;</li>
+                        <li class="collection-item">1234 Main Street</li>
+                        <li class="collection-item">Hyannis, MA 02631</li>
+
+                    </ul>
                 </div>
             </div>
         </div>
