finished the #contact section and form

--- a/index.html
+++ b/index.html
@@ -278,11 +278,28 @@
                         <li class="collection-header">
                             <h4>Location</h4>
                         </li>
-                        <li class="collection-item">Cape Cod Real Estate &comp;</li>
+                        <li class="collection-item">Cape Cod Real Estate &trade;</li>
                         <li class="collection-item">1234 Main Street</li>
                         <li class="collection-item">Hyannis, MA 02631</li>
-
                     </ul>
+                </div>
+                <div class="col s12 m6">
+                    <div class="card-panel grey lighten-3">
+                        <h5>Please fill out this form</h5>
+                            <div class="input-field">
+                                <input type="text" placeholder="Name">
+                            </div>
+                            <div class="input-field">
+                                <input type="email" placeholder="Email">
+                            </div>
+                            <div class="input-field">
+                                <input type="tel" placeholder="Phone">
+                            </div>
+                            <div class="input-field">
+                                <textarea class="materialize-textarea"  placeholder="Enter Message"></textarea>
+                            </div>
+                            <input type="submit" value="Submit" class="btn" >
+                    </div>
                 </div>
             </div>
         </div>
