added in FOOTER at bottom of page

--- a/index.html
+++ b/index.html
@@ -305,6 +305,11 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="section blue darken-2 white-text center">
+        <p class="flow-text">Cape Cod Real Estate &copy; 2018</p>
+    </footer>
+
     <!-- Compiled and minified Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
