filled in the cards with icons and text to match

--- a/index.html
+++ b/index.html
@@ -125,23 +125,23 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="card-panel">
-            <i class="material-icons large blue-text">add</i>
-            <h4>Stuff</h4>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <i class="material-icons large blue-text">location_city</i>
+            <h4>Local Offices</h4>
+            <p>Real people to help you when you need it</p>
           </div>
         </div>
         <div class="col s12 m4">
           <div class="card-panel">
-            <i class="material-icons large blue-text">add</i>
-            <h4>Stuff</h4>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <i class="material-icons large blue-text">place</i>
+            <h4>Location</h4>
+            <p>We take pride finding the right location for you and your family.</p>
           </div>
         </div>
         <div class="col s12 m4">
           <div class="card-panel">
-            <i class="material-icons large blue-text">add</i>
-            <h4>Stuff</h4>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <i class="material-icons large red-text">whatshot</i>
+            <h4>Newist Listings</h4>
+            <p>We're always updating our listings, so be sure to check back regularly. </p>
           </div>
         </div>
       </div>
@@ -225,7 +225,7 @@
       </h4>
       <div class="row">
         <div class="col s12 m4">
-          <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
+          <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" data-caption="Here's stuff about this place..."/>
         </div>
         <div class="col s12 m4">
           <img src="img/beach-house-3345590_1920.jpg" alt="" class="materialboxed responsive-img" />
