resized lighthouse.jpg and converted it to .png file

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="slider">
       <ul class="slides">
         <li>
-          <img src="img/lighthouse-1149112_1920.jpg">
+          <img src="img/lighthouse.png">
           <!-- Image from Pixabay.com 
                         https://pixabay.com/en/lighthouse-seaside-coast-coastline-1149112/ -->
           <div class="caption left-align">
@@ -179,7 +179,7 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="img/lighthouse-1149112_1920.jpg" alt="">
+              <img src="img/lighthouse.png" alt="">
               <span class="card-title">Light House </span>
             </div>
             <div class="card-content">
